scrollbar and more css fixes

--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -45,7 +45,7 @@
 /* D E S K T O P   V I E W -large */
 @media only screen and (min-width: 990px) and (max-width: 1439px) {
   .map {
-    height: 624px;
+    height: 600px;
     margin-top: 0;
   }
 }
