--- a/src/styles/salerepresentativecard.scss
+++ b/src/styles/salerepresentativecard.scss
@@ -512,13 +512,13 @@ input:focus {
 /* Desktop   V I E W -large */
 @media only screen and (min-width: 990px) and (max-width: 1439px) {
   .saleRepresentativeCard_div_img {
-    width: 120px;
+    max-width: 120px;
+    width: 10vw;
   }
 
   .saleRepresentativeCard_div {
     justify-content: center;
   }
-
   .saleRepresentativeCard_div--picturesContainer {
     display: flex;
     align-items: center;
@@ -537,6 +537,42 @@ input:focus {
   .main_section_representatives {
     min-width: 320px;
     width: 24vw;
+    overflow: hidden;
+    overflow-y: scroll;
+    max-height: 600px;
+  }
+
+  .sales-scrollbarSeparation {
+    margin-right: 5px;
+  }
+
+  .main_section_representatives::-webkit-scrollbar {
+    width: 6px;
+    // background-color: #f5f5f5;
+  }
+
+  .main_section_representatives::-webkit-scrollbar-thumb {
+    background-color: #006039;
+    border-radius: 10px;
+  }
+
+  .main_section_representatives::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  .saleRepresentativeCard_ul_li {
+    font-size: 0.9rem;
+  }
+
+  .saleRepresentativeCard_div {
+    grid-template-columns: unset;
+    display: flex;
+  }
+
+  .saleRepresentativeCard_div--button {
+    margin-top: 0;
   }
 }
 
